Fixed overflow + tab title

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -15,7 +15,7 @@ html, body {
   padding: 0;
   height: 100vh;
   background-color: #dfacb9;
-   overflow-y: auto; /* Ensure proper scrolling */
+  overflow-y: auto; /* Ensure proper scrolling */
 
 
 }
@@ -27,7 +27,7 @@ div .container {
 .vsc-initialized {
     background-color: rgb(146, 163, 179);
     background-color: #dfacb9;
-    height: 100%;
+    height: 100vh;
     
   }
   
@@ -59,7 +59,7 @@ div .container {
      */
   
      background-color: #dfacb9;
-  
+       
       display: flex;
       flex-direction: column;
       align-items: center; /* Centers content horizontally */
@@ -69,6 +69,7 @@ div .container {
       padding: 0;
       box-sizing: border-box;
       height: 100vh;
+
       
     }
   
@@ -85,6 +86,7 @@ div .container {
       display: flex;
       flex-direction: column;
       width: 98%;
+      overflow: scroll;
       
     }
     
@@ -787,6 +789,19 @@ button {
 
 button:hover {
   background-color: #044c9a;
+}
+
+body {
+  background-color: #dfacb9;
+}
+
+.container {
+  background-color: #dfacb9;
+}
+
+body {
+  background-color: #dfacb9;
+
 }
 
 
